--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8080
+server.port=8887
+
+github.client.id=b011fd89e4be9bd3427c
+github.client.secret=b87384b66fde3eb834e141f433f2556543e4b318
+github.redirect.uri=http://localhost:8887/callback
