--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8887
 
 github.client.id=b011fd89e4be9bd3427c
-github.client.secret=b87384b66fde3eb834e141f433f2556543e4b318
+github.client.secret=06ff1413adc919bdc29e1b16c0c1a20c52004a1e
 github.redirect.uri=http://localhost:8887/callback
 
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
