--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 server.port=8887
 
 github.client.id=b011fd89e4be9bd3427c
-github.client.secret=06ff1413adc919bdc29e1b16c0c1a20c52004a1e
+github.client.secret=10e420d3a74a0a17a8e53b27b4207cb56a91d475
 github.redirect.uri=http://localhost:8887/callback
 
 spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.flyway.enabled=true
+#????????,flyway ? clean ??????? schema ???? table, ????????????? false ???????????????
+spring.flyway.clean-disabled=false
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+# SQL ?????,?????????? ??? classpath:db/migration
+spring.flyway.locations=db/migration
