--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.flyway.enabled=true
-#????????,flyway ? clean ??????? schema ???? table, ????????????? false ???????????????
-spring.flyway.clean-disabled=false
+spring.flyway.enabled=false
+spring.flyway.clean-disabled=true
 spring.flyway.baseline-on-migrate=true
-spring.flyway.baseline-version=0
-# SQL ?????,?????????? ??? classpath:db/migration
+spring.flyway.baseline-version=1
 spring.flyway.locations=db/migration
