--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8887
 
 github.client.id=b011fd89e4be9bd3427c
-github.client.secret=10e420d3a74a0a17a8e53b27b4207cb56a91d475
+github.client.secret=4f4c2933be10b19d5c6ffc63da29e60d6b07da5d
 github.redirect.uri=http://localhost:8887/callback
 
 spring.datasource.url=jdbc:mysql://localhost:3306/community?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
@@ -14,3 +14,5 @@ spring.flyway.clean-disabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 spring.flyway.locations=db/migration
+
+mybatis.configuration.map-underscore-to-camel-case=true
