Resolve problems with null

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.flyway.baseline-version=1
 spring.flyway.locations=db/migration
 
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=cn.hunit.community.model
+mybatis.mapper-locations=classpath:mapper/*.xml
